Changelog for getResources.

getResources 1.6.0-pl (February 19, 2013)
====================================
- Add tplWrapper for specifying a wrapper template

getResources 1.5.1-pl (August 23, 2012)
====================================
- Add tplOperator property to default properties
- [#73] Add between tplOperator to conditionalTpls

getResources 1.5.0-pl (June 15, 2012)
====================================
- [#58] Add tplCondition/conditionalTpls support
- [#67] Add odd property
- [#60] Allow custom delimiters for tvFilters
- [#63] Give tplFirst/tplLast precedence over tpl_X/tpl_nX
- Automatically prepare TV values for media-source dependent TVs

getResources 1.4.2-pl (December 9, 2011)
====================================
- [#25] Add new operators to tvFilters
- [#37] Consider default values with tvFilters
- [#57] Fix tpl overrides and improve order

getResources 1.4.1-pl (December 8, 2011)
====================================
- [#57] Add support for factor-based tpls
- [#54], [#55] Fix processTVList feature

getResources 1.4.0-pl (September 21, 2011)
====================================
- [#50] Use children of parents from other contexts
- [#45] Add dbCacheFlag to control db caching of getCollection, default to false
- [#49] Allow comma-delimited list of TV names as includeTVList or processTVList

getResources 1.3.1-pl (July 14, 2011)
====================================
- [#43] Allow 0 as idx property
- [#9] Fix tvFilters grouping
- [#46] Fix criteria issue with &resources property

getResources 1.3.0-pl (March 28, 2011)
====================================
- [#33] sortbyTVType: Allow numeric and datetime TV sorting via SQL CAST()
- [#24] Fix typos in list property options
- [#4] Support multiple sortby fields via JSON object
- Use get() instead to toArray() if includeContent is false
- [#22] Add &toSeparatePlaceholders property for splitting output

getResources 1.2.2-pl (October 18, 2010)
====================================